--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@ UX也是棒棒的，我想说，这就是我一直想要的。</p>
 <li><a href="#7">Accidental Variable Shadowing</a></li>
 <li><a href="#8">Can&rsquo;t Use &ldquo;nil&rdquo; to Initialize a Variable Without an Explicit Type</a></li>
 <li><a href="#9">Using &ldquo;nil&rdquo; Slices and Maps</a></li>
+<li><a href="#10">Map Capacity</a></li>
 </ol>
 
 </div>
