--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 一个网站<a href="https://libskia.so/">https://libskia.so/</a>, 然后顺便浏览了一下，做的还是很有吸引力的个人网站。其中有一
 篇Blog： <a href="https://libskia.so/b/discovering-gogs.html">Discovering Gogs</a></p>
 
-<p>作者写道:<br />
+<p>博主写道:<br />
 I just discovered Gogs, a light Git web fronted written in Go.
 After reading a bit on its website, I decided to try a bit, just
 for fun. It was really easy to install it with NginX as reverse
