--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
 <li><a href="https://kubernetes.io/cn/docs/" title="官方中文文档">官方中文文档</a></li>
 <li><a href="https://kubernetes.feisky.xyz/zh/" title="feisky版 Kubernetes指南">Kubernetes指南</a></li>
 <li><a href="https://jimmysong.io/kubernetes-handbook/" title="Jimmy版 Kubernetes指南">Kubernetes指南</a></li>
+<li><a href="https://feisky.gitbooks.io/sdn/" title="SDN指南">SDN指南</a></li>
 </ul>
 
 <p></p>
