--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@ or other conditions. The main features are:</p>
     r.HandleFunc(&quot;/products&quot;, ProductsHandler)
     r.HandleFunc(&quot;/articles&quot;, ArticlesHandler)
     http.Handle(&quot;/&quot;, r)
+log.Fatal(http.ListenAndServe(&quot;:12345&quot;, nil))
 }
 </code></pre>
 </div>
