--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ fathom('trackPageview');
 </header>
 <div class="summary">
     <p>The name mux stands for &ldquo;HTTP request multiplexer&rdquo;. Like the standard
-http.ServeMux, mux.Router matches incoming requests against a list of
+<code>http.ServeMux</code>, <code>mux.Router</code> matches incoming requests against a list of
 registered routes and calls a handler for the route that matches the URL
 or other conditions. The main features are:</p>
 
