--- a/index.html
+++ b/index.html
@@ -295,74 +295,47 @@ fathom('trackPageview');
                         
                             <article class="post panel-wrapper">
 <header>
-<h2 ><a href="http://alimy.me/post/dev_201901091450/" title="阅读全文">YAML Reference card </a> </h2>
+<h2 ><a href="http://alimy.me/post/dev_201901091450/" title="阅读全文">YAML 简明参考 </a> </h2>
 
 </header>
 <div class="summary">
-    <pre><code>%YAML 1.1   # Reference card
----
-Collection indicators:
-    '? ' : Key indicator.
-    ': ' : Value indicator.
-    '- ' : Nested series entry indicator.
-    ', ' : Separate in-line branch entries.
-    '[]' : Surround in-line series branch.
-    '{}' : Surround in-line keyed branch.
-Scalar indicators:
-    '''' : Surround in-line unescaped scalar ('' escaped ').
-    '&quot;'  : Surround in-line escaped scalar (see escape codes below).
-    '|'  : Block scalar indicator.
-    '&gt;'  : Folded scalar indicator.
-    '-'  : Strip chomp modifier ('|-' or '&gt;-').
-    '+'  : Keep chomp modifier ('|+' or '&gt;+').
-    1-9  : Explicit indentation modifier ('|1' or '&gt;2').
-           # Modifiers can be combined ('|2-', '&gt;+1').
-Alias indicators:
-    '&amp;'  : Anchor property.
-    '*'  : Alias indicator.
-Tag property: # Usually unspecified.
-    none    : Unspecified tag (automatically resolved by application).
-    '!'     : Non-specific tag (by default, &quot;!!map&quot;/&quot;!!seq&quot;/&quot;!!str&quot;).
-    '!foo'  : Primary (by convention, means a local &quot;!foo&quot; tag).
-    '!!foo' : Secondary (by convention, means &quot;tag:yaml.org,2002:foo&quot;).
-    '!h!foo': Requires &quot;%TAG !h! &lt;prefix&gt;&quot; (and then means &quot;&lt;prefix&gt;foo&quot;).
-    '!&lt;foo&gt;': Verbatim tag (always means &quot;foo&quot;).
-Document indicators:
-    '%'  : Directive indicator.
-    '---': Document header.
-    '...': Document terminator.
-Misc indicators:
-    ' #' : Throwaway comment indicator.
-    '`@' : Both reserved for future use.
-Special keys:
-    '='  : Default &quot;value&quot; mapping key.
-    '&lt;&lt;' : Merge keys from another mapping.
-Core types: # Default automatic tags.
-    '!!map' : { Hash table, dictionary, mapping }
-    '!!seq' : { List, array, tuple, vector, sequence }
-    '!!str' : Unicode string
-More types:
-    '!!set' : { cherries, plums, apples }
-    '!!omap': [ one: 1, two: 2 ]
-Language Independent Scalar types:
-    { ~, null }              : Null (no value).
-    [ 1234, 0x4D2, 02333 ]   : [ Decimal int, Hexadecimal int, Octal int ]
-    [ 1_230.15, 12.3015e+02 ]: [ Fixed float, Exponential float ]
-    [ .inf, -.Inf, .NAN ]    : [ Infinity (float), Negative, Not a number ]
-    { Y, true, Yes, ON  }    : Boolean true
-    { n, FALSE, No, off }    : Boolean false
-    ? !!binary &gt;
-        R0lG...BADS=
-    : &gt;-
-        Base 64 binary value.
-Escape codes:
- Numeric   : { &quot;\x12&quot;: 8-bit, &quot;\u1234&quot;: 16-bit, &quot;\U00102030&quot;: 32-bit }
- Protective: { &quot;\\&quot;: '\', &quot;\&quot;&quot;: '&quot;', &quot;\ &quot;: ' ', &quot;\&lt;TAB&gt;&quot;: TAB }
- C         : { &quot;\0&quot;: NUL, &quot;\a&quot;: BEL, &quot;\b&quot;: BS, &quot;\f&quot;: FF, &quot;\n&quot;: LF, &quot;\r&quot;: CR,
-               &quot;\t&quot;: TAB, &quot;\v&quot;: VTAB }
- Additional: { &quot;\e&quot;: ESC, &quot;\_&quot;: NBSP, &quot;\N&quot;: NEL, &quot;\L&quot;: LS, &quot;\P&quot;: PS }
-...
-</code></pre>
+    <h3 id="sect-语法说明">&sect;语法说明</h3>
+
+<p>在<a href="https://yaml.org">yaml.org（英文）</a>可以找到轻巧而好用的<a href="https://yaml.org/refcard.html">小抄（亦是用YAML表示）</a>及<a href="https://yaml.org/spec/">格式说明</a>。下面的内容，是关于基本组件的摘要。</p>
+
+<ul>
+<li>YAML使用可打印的Unicode字符，可使用UTF-8或UTF-16。</li>
+<li>使用空白字符为文件缩进来表示结构；不过不能使用跳格字符(TAB)。</li>
+<li>注解由井字号（ # ）开始，可以出现在一行中的任何位置，而且范围只有一行（也就是一般所谓的单行注解）</li>
+<li>每个清单成员以单行表示，并用短杠+空白（ -   ）起始。或使用方括号（ [ ] ），并用逗号+空白（ ,   ）分开成员。</li>
+<li>每个散列表的成员用冒号+空白（ :   ）分开键值和内容。或使用大括号（ {   } ），并用逗号+空白（ ,   ）分开。
+
+<ul>
+<li>散列表的键值可以用问号 ( ? )起始，用来明确的表示多个词汇组成的键值。</li>
+</ul></li>
+<li>字符串平常并不使用引号，但必要的时候可以用双引号 ( &ldquo; )或单引号 ( &lsquo; )框住。
+
+<ul>
+<li>使用双引号表示字符串时，可用倒斜线（ \ ）开始的转义字符（这跟C语言类似）表示特殊字符。</li>
+</ul></li>
+<li>区块的字符串用缩进和修饰符（非必要）来和其他数据分隔，有新行保留（preserve）（使用符号 | ）或新行折叠（flod）（使用符号 &gt; ）两种方式。</li>
+<li>在单一文件中，可用连续三个连字号（&mdash;）区分多个文件。
+
+<ul>
+<li>另外，还有选择性的连续三个点号（ &hellip; ）用来表示文件结尾。</li>
+</ul></li>
+<li>重复的内容可使从参考标记星号 ( * )复制到锚点标记（ &amp; ）。</li>
+<li>指定格式可以使用两个惊叹号 ( !! )，后面接上名称。</li>
+<li>文件中的单一文件可以使用指导指令，使用方法是百分比符号( % )。有两个指导指令在YAML1.1版中被定义：
+
+<ul>
+<li>%YAML 指导指令，用来识别文件的YAML版本。</li>
+<li>%TAG 指导指令，被用在URI的前缀标记。这个方法在标记节点的类型时相当有用。
+YAML在使用逗号及冒号时，后面都必须接一个空白字符，所以可以在字符串或数值中自由加入分隔符号( 例如：5,280 或 <a href="http://www.wikipedia.org">http://www.wikipedia.org</a> ) 而不需要使用引号。</li>
+</ul></li>
+</ul>
+
+<p>另外还有两个特殊符号在YAML中被保留，有可能在未来的版本被使用&ndash;（ @ ）和（ ` ）。</p>
 
 <p></p>
 </div>
