--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ fathom('trackPageview');
 <div class="summary">
     <h2 id="schema-language">Schema Language</h2>
 
-<p>Like Protocol Buffers and Thrift (but unlike JSON or MessagePack), Cap’n Proto messages are strongly-typed and not self-describing. You must define your message structure in a special language, then invoke the Cap’n Proto compiler (capnp compile) to generate source code to manipulate that message type in your desired language.</p>
+<p>Like Protocol Buffers and Thrift (but unlike JSON or MessagePack), Cap’n Proto messages are strongly-typed and not self-describing. You must define your message structure in a special language, then invoke the Cap’n Proto compiler (<code>capnp compile</code>) to generate source code to manipulate that message type in your desired language.</p>
 
 <h4 id="for-example">For example:</h4>
 
